Insert initial page structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="page-content">
+    <div id="left-panel">
+      <div id="project-name">
+        PLANTLY
+      </div>
+      <div id="footer">
+        Photo by...
+      </div>
+    </div>
+    <div id="right-panel">
+      <div id="header">
+        <div id="text1">Welcome to the online meeting place for plant lovers. 
+          Everybody is welcome to share his love for common and uncommon house plants. 
+          Sign up now to enter community of people with same interests as you.
+        </div>
+        <div id="text2">
+          Do it now!
+        </div>
+      </div>
+      <div id="form-container">
+        Form placeholder
+      </div>
+      <div id="submit-container">
+        Submit placeholder
+      </div>
+    </div>
+  </div>
 </body>
 </html>
