Rework left panel flexbox logic

--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="page-content">
-    <div id="left-panel">
-      <div id="project-name">
-        PLANTLY
-      </div>
-      <div id="footer">
+  <div class="page-content">
+    <div class="left-panel">
+        <div class="project-name">
+          PLANTLY
+        </div>
+      <div class="footer">
         Photo by...
       </div>
     </div>
-    <div id="right-panel">
-      <div id="header">
-        <div id="text1">Welcome to the online meeting place for plant lovers. 
+    <div class="right-panel">
+      <div class="header">
+        <div class="text1">Welcome to the online meeting place for plant lovers. 
           Everybody is welcome to share his love for common and uncommon house plants. 
           Sign up now to enter community of people with same interests as you.
         </div>
-        <div id="text2">
+        <div class="text2">
           Do it now!
         </div>
       </div>
-      <div id="form-container">
+      <div class="form-container">
         Form placeholder
       </div>
-      <div id="submit-container">
+      <div class="submit-container">
         Submit placeholder
       </div>
     </div>
