Add background image, adjust color pallette

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <div class="page-content">
     <div class="left-panel">
         <div class="project-name">
-          PLANTLY
+          MOUNTANEERS
         </div>
       <div class="footer">
-        Photo by...
+        Photo by <a href="https://unsplash.com/@therawhunter?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Massimiliano Morosinotto</a> on <a href="https://unsplash.com/s/photos/mountains?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
       </div>
     </div>
     <div class="right-panel">
       <div class="header">
-        <div class="text1">Welcome to the online meeting place for plant lovers. 
-          Everybody is welcome to share his love for common and uncommon house plants. 
+        <div class="text1">Welcome to the online meeting place for mountain lovers. 
+          Everybody is welcome to share his love for common and uncommon mountain trails. 
           Sign up now to enter community of people with same interests as you.
         </div>
         <div class="text2">
@@ -28,10 +28,48 @@
         </div>
       </div>
       <div class="form-container">
-        Form placeholder
+        <h1>Let's get this bread!</h1>
+        <form action="" method="post" id="register-form">
+          <div class="form">
+            <div class="form-left">
+              <div class="form-element">
+                <label for="name">FIRST NAME</label>
+                <input type="text">
+              </div>
+              <div class="form-element">
+                <label for="email">EMAIL</label>
+                <input type="email">
+              </div>
+              <div class="form-element">
+                <label for="password">PASSWORD</label>
+                <input type="password">
+              </div>
+            </div>
+            <div class="form-right">
+              <div class="form-element">
+                <label for="surname">LAST NAME</label>
+                <input type="text">
+              </div>
+              <div class="form-element">
+                <label for="phone">PHONE NUMBER</label>
+                <input type="tel">
+              </div>
+              <div class="form-element">
+                <label for="passwordAgain">CONFIRM PASSWORD</label>
+                <input type="password">
+              </div>
+            </div>  
+          </div>
+        </form>
       </div>
       <div class="submit-container">
-        Submit placeholder
+        <div class="submit-button">
+          <button type="submit" form="register-form">SUBMIT</button>
+        </div>
+        <div class="log-in">
+          Already have an account? <a href="">Log in</a>
+        </div>
+        
       </div>
     </div>
   </div>
