--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div class="page-content">
@@ -21,10 +24,10 @@
       <div class="header">
         <div class="text1">Welcome to the online meeting place for mountain lovers. 
           Everybody is welcome to share his love for common and uncommon mountain trails. 
-          Sign up now to enter community of people with same interests as you.
+          Sign up <i>now</i> to enter community of people with same interests as you.
         </div>
         <div class="text2">
-          Do it now!
+          Do it <i>now</i>!
         </div>
       </div>
       <div class="form-container">
