Refine form colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="page-content">
     <div class="left-panel">
         <div class="project-name">
-          MOUNTANEERS
+          MOUNTAINEERS
         </div>
       <div class="footer">
         Photo by <a href="https://unsplash.com/@therawhunter?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Massimiliano Morosinotto</a> on <a href="https://unsplash.com/s/photos/mountains?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
